# ULSA-Schedule-Parser

./: .gitignore  Imprimir Inscripción.html  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: flujodetrabajo.yml
tests/: __init__.py  test_cli.py  test_conflicts.py  test_html_parser.py  test_model_parsing.py  test_normalize.py  test_packaging_files.py  test_render_pdf.py  test_render_png.py  test_render_svg.py
tests/fixtures/: imprimir_inscripcion.html
ulsa_schedule/: __init__.py  cli.py
ulsa_schedule/adapters/: html_bs4.py  render_pillow.py  render_reportlab.py  render_svg.py
ulsa_schedule/domain/: model.py  normalize.py
ulsa_schedule/use_cases/: render_schedule.py
